@@ -26,6 +26,9 @@ Version 1.3.1 (2005-04-??)
 
   TODO: compile the .xcdatamodel file.
 
+- If the selector name ends with ':error:' and the last argument is a pointer
+  to an object, the argument is now assumed to be an output argument.
+
 - More conveniences for ``list``-like and ``dict``-like
   objects: ``__reversed__``, ``reverse``, ``pop``,
   ``remove``, ``fromkeys``.
